@@ -1,1 +1,0 @@
-shim-amd64-signed-template: missing-dep-for-interpreter
