@@ -1,1 +1,0 @@
-shim-i386-signed-template: missing-dep-for-interpreter
