@@ -1,10 +1,10 @@
-shim-@arch@-signed (1+@version_mangled@) @distribution@; urgency=@urgency@
+shim-helpers-@arch@-signed (1+@version_mangled@) @distribution@; urgency=@urgency@
 
   * Update to shim @version_binary@
 
  -- Debian signing service <ftpmaster@debian.org>  @date@
 
-shim-@arch@-signed (1) unstable; urgency=medium
+shim-helpers-@arch@-signed (1) unstable; urgency=medium
 
   * Add template source package for signing
 
