@@ -15,8 +15,9 @@ shim (15+1533136590.3beb971-3) UNRELEASED; urgency=medium
   [ Steve McIntyre ]
   * Change maintenance address to be the EFI team
   * Add me and vorlon to the Uploaders list
+  * Rename the helper binary packages to shim-helpers-$arch.
 
- -- Luca Boccassi <bluca@debian.org>  Fri, 15 Feb 2019 19:50:10 +0000
+ -- Steve McIntyre <93sam@debian.org>  Wed, 06 Mar 2019 22:35:52 +0000
 
 shim (15+1533136590.3beb971-2) unstable; urgency=medium
 
